<resources>
    <string name="facebook_app_id">1272175256254255</string>
    <string name="fb_login_protocol_scheme">fb1272175256254255</string>
    <string name="app_name">CukCukLite</string>
    <string name="image_view">ImageView</string>
    <string name="stop_sell">Ngừng bán</string>
    <string name="save">Lưu</string>
    <string name="add_dish">Thêm món</string>
    <string name="cancel">Hủy</string>
    <string name="dish_name">Tên món</string>
    <string name="important">*</string>
    <string name="hint_dish_name">Nhập tên món</string>
    <string name="cost">Giá bán</string>
    <string name="unit">Đơn vị tính</string>
    <string name="color">Màu sắc</string>
    <string name="icon">Biểu tượng</string>
    <string name="ok">Đồng ý</string>
    <string name="done">Xong</string>
    <string name="error_input_unit_empty">Không được bỏ trống đơn vị tính</string>
    <string name="error_unit_exist">Đơn vị đã tồn tại</string>
    <string name="error_empty_name">Tên món không được để trống</string>
    <string name="error_empty_unit">Đơn vị tính không được để trống</string>
    <string name="remove">Xóa</string>
    <string name="state">Trạng thái</string>
    <string name="confirm_remove_dish">Bạn có chắc chắn muốn xóa món này không?</string>
    <string name="confirm_remove_unit">Bạn có chắc chắn muốn xóa đơn vị tính này không?</string>
    <string name="confirm_remove_order">Bạn có chắc chắn muốn hủy các món đã chọn không?</string>
    <string name="edit_dish">Sửa món</string>
    <string name="confirm_dialog">confirm_dialog</string>
    <string name="input_dialogl">input_dialog</string>
    <string name="pick_color">Chọn màu</string>
    <string name="fragment_picker">fragment_picker</string>
    <string name="icon_fragment">icon_fragment</string>
    <string name="hint_unit_input">Nhập đơn vị tính</string>
    <string name="hiep">Đinh Nguyễn Hoàng Hiệp</string>
    <string name="sell">Bán hàng</string>
    <string name="report">Báo cáo</string>
    <string name="setting">Thiết lập</string>
    <string name="sync">Đồng bộ dữ liệu</string>
    <string name="connect">Liên kết tài khoản</string>
    <string name="help">Trợ giúp</string>
    <string name="noti">Thông báo</string>
    <string name="suggest">Giới thiệu cho bạn</string>
    <string name="rate">Đánh giá ứng dụng</string>
    <string name="feed_back">Góp ý cho nhà phát triển</string>
    <string name="info">Thông tin sản phẩm</string>
    <string name="account">Tài khoản</string>
    <string name="logout">Đăng xuât</string>
    <string name="change_pass">Đặt mật khẩu</string>
    <string name="menu">Thực đơn</string>
    <string name="fragment_cal">Fragment Cal</string>
    <string name="title_cancel_short">Hủy</string>
    <string name="take_money">Thu tiền</string>
    <string name="content_login_google">Đăng nhập bằng Google</string>
    <string name="content_login_facebook">Đăng nhập bằng Facebook</string>
    <string name="content_login_phone_email_top">Đăng nhập bằng</string>
    <string name="content_login_phone_email_bot">Số điện thoại hoặc email</string>
    <string name="app_name_up_case">CUKCUK LITE</string>
    <string name="login_number_phone_hint">Số điện thoại hoặc email</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="button_login">ĐĂNG NHẬP</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="login_msg_password_empty">Mật khẩu không được để trống.</string>
    <string name="login_msg_username_empty">Tên đăng nhập không được để trống.</string>
    <string name="msg_login_fail">Thông tin đăng nhập không đúng. Vui lòng kiểm tra lại.</string>
    <string name="loading">Đang xử lý</string>
    <string name="no_account">Bạn chưa có tài khoản?</string>
    <string name="register">Đăng ký</string>
    <string name="button_cancel_1">Hủy bỏ</string>
    <string name="img_content_description">no_image</string>
    <string name="key1">1</string>
    <string name="Text_Please_Order">Mời bạn nói để chọn món!</string>
    <string name="total_money">Tổng tiền</string>
    <string name="title_add_order">Chọn món</string>
    <string name="sale">Bán hàng</string>
    <string name="msg_person_empty">Mời bạn thêm số người</string>
    <string name="msg_table_empty">Mời bạn thêm số bàn</string>
    <string name="msg_dish_empty">Mời bạn chọn món</string>
    <string name="title_charges">Thu tiền</string>
    <string name="title_bill">Hóa đơn</string>
    <string name="label_number">Số:</string>
    <string name="label_table">Bàn:</string>
    <string name="label_date">Ngày:</string>
    <string name="title_product_name">Tên hàng</string>
    <string name="title_quantity_short">SL</string>
    <string name="title_unit_price">Đơn giá</string>
    <string name="into_money">Thành tiền</string>
    <string name="title_remain_amount">Số tiền phải trả</string>
    <string name="title_guest_amount">Tiền khách đưa</string>
    <string name="title_return_amount">Tiền trả lại cho khách</string>
    <string name="price_sale">Giá bán</string>
    <string name="zero">0</string>
    <string name="error_money">Giá tiền phải lớn hơn 0</string>
    <string name="dialog_calculator">dialog_calculator</string>
    <string name="msg_empty_report">Báo cáo doanh thu không có số liệu.</string>
    <string name="time_param">Thời gian</string>
    <string name="param_report_current">Gần đây</string>
    <string name="param_report_last_month">Tháng trước</string>
    <string name="param_report_last_week">Tuần trước</string>
    <string name="param_report_last_year">Năm trước</string>
    <string name="param_report_other">Khác</string>
    <string name="param_report_this_month">Tháng này</string>
    <string name="param_report_this_week">Tuần này</string>
    <string name="param_report_this_year">Năm nay</string>
    <string name="param_report_today">Hôm nay</string>
    <string name="param_report_yesterday">Hôm qua</string>
    <string name="vertical_label_chart">(Nghìn đồng)</string>
    <string name="horizon_label_chart">(Ngày)</string>

    <string name="btn_done">Xong</string>
    <string name="str_minus">Giảm</string>
    <string name="str_plus">Tăng</string>
    <string name="key00">00</string>
    <string name="key000">000</string>
    <string name="key2">2</string>
    <string name="key3">3</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key6">6</string>
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="keyClear">C</string>
    <string name="key0">0</string>
    <string name="title_table">Nhập số bàn</string>
    <string name="title_person">Nhập số người</string>
    <string name="to_date">Đến ngày</string>
    <string name="from_date">Từ ngày</string>
    <string name="title_dialog_pick_time">Thời gian</string>
    <string name="report_sale_inventoryitem_title">Doanh thu theo mặt hàng</string>
    <string name="title_suggest_money">Gợi ý tiền mặt</string>
    <string name="accept">Đồng ý</string>
    <string name="you_have_not_dish_in_menu">Chưa có khách nào gọi món</string>
    <string name="click_here">Bấm vào đây hoặc dấu + để chọn món</string>
    <string name="you_have_not_dish_in_menu_1">Chưa có món nào trong thực đơn</string>
    <string name="click_here_1">Bấm vào đây hoặc bấm vào + để thêm món</string>
    <string name="msg_dialog_pick_date">Giá trị Từ ngày phải nhỏ hơn hoặc bằng Đến ngày</string>
    <string name="used_dish">Món ăn đã được sử dụng, bạn không được phép xóa</string>
    <string name="pie_chart">pie_chart</string>
    <string name="total_amount">Tổng doanh thu</string>
    <string name="password_re_hint">Nhập lại mật khẩu</string>
    <string name="login_msg_re_password_empty">Xác nhận mật khẩu không được để trống</string>
    <string name="login_msg_re_password_fail">Mật khẩu nhập lại không khớp</string>
    <string name="login_msg_register_fail">Đăng kí tài khoản không thành công</string>
    <string name="logout_confirm">Bạn có chắc chắn muốn đăng xuất</string>
    <string name="url_rate_app">market://details?id=vn.com.misa.android_cukcuklite</string>
    <string name="mess_share">Chào bạn. Hãy tải ngay CUKCUK Lite - ứng dụng bán hàng miễn phí dành cho các quán nhỏ và quầy di động tại địa chỉ: https://play.google.com/store/apps/details?id=vn.com.misa.android_cukcuklite</string>
    <string name="share_via">Chia sẻ qua</string>
    <string name="mess_bill">Số tiền khách đưa nhỏ hơn số tiền phải trả</string>
  <string name="totalRevenue">Tổng \n doanh thu</string>
</resources>
