<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/app_bar_edit_dish" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ln_height"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            style="@style/FontBodyTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:gravity="center"
            android:text="@string/dish_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:gravity="center"
            android:text="@string/important"
            android:textColor="@color/color_red" />

        <EditText
            android:id="@+id/edtName"
            style="@style/FontBodyTextRegular"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center"
            android:hint="@string/hint_dish_name"
            android:inputType="textCapSentences"
            android:paddingEnd="@dimen/edt_padding_end"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_color" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_thick"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/lnCost"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ln_height"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            style="@style/FontBodyTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:gravity="center"
            android:text="@string/cost" />

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:drawableEnd="@drawable/ic_next"

            android:gravity="end|center"
            android:paddingEnd="@dimen/tv_padding_end"
            android:singleLine="true"
            android:textColor="@color/color_black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_thick"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/lnUnit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ln_height"
        android:background="@drawable/bg_item"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            style="@style/FontBodyTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:gravity="center"
            android:text="@string/unit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:gravity="center"
            android:text="@string/important"
            android:textColor="@color/color_red" />

        <TextView
            android:id="@+id/tvUnit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_next"
            android:gravity="end|center"
            android:paddingEnd="@dimen/tv_padding_end"
            android:singleLine="true"
            android:textColor="@color/color_black" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_thick"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ln_pick_h"
        android:orientation="horizontal">

        <TextView
            style="@style/FontBodyTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:gravity="center"
            android:text="@string/color" />

        <RelativeLayout
            android:id="@+id/rlIconContainer1"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/circle_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/rl_margin_start"
            android:background="@drawable/bg_circle"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivProductIcon1"
                android:layout_width="@dimen/image_circle_size"
                android:layout_height="@dimen/image_circle_size"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_color_lens" />
        </RelativeLayout>

        <TextView
            style="@style/FontBodyTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_icon_margin_start"
            android:gravity="center"
            android:text="@string/icon" />

        <RelativeLayout
            android:id="@+id/rlIconContainer2"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/circle_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/rl_margin_start"
            android:background="@drawable/bg_circle"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivProductIcon2"
                android:layout_width="@dimen/image_circle_size"
                android:layout_height="@dimen/image_circle_size"
                android:contentDescription="@string/image_view"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_quest" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ln_height"
        android:orientation="horizontal">

        <TextView
            style="@style/FontBodyTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:layout_marginEnd="@dimen/tv_margin_end"
            android:gravity="center"
            android:text="@string/state" />

        <CheckBox
            android:id="@+id/cbState"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            app:buttonTint="@color/colorPrimary" />

        <TextView
            style="@style/FontBodyTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:gravity="center"
            android:text="@string/stop_sell"
            android:textColor="@color/color_black" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRemove"
            style="@style/FontButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_save_h"
            android:layout_margin="@dimen/btn_save_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_cancel"
            android:gravity="center"
            android:text="@string/remove"
            android:textAllCaps="true"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/tvDone"
            style="@style/FontButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_save_h"
            android:layout_margin="@dimen/btn_save_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_save"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/color_white" />
    </LinearLayout>

</LinearLayout>