<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_note_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/view_title_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/min_height_message_dialog"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_normal_small"
        android:paddingTop="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_normal_small"
        android:paddingBottom="@dimen/margin_medium">

        <EditText
            android:id="@+id/etUnitName"
            style="@style/EditTextDefaultSingleLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_unit_input"
            android:paddingTop="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:scrollHorizontally="true"
            android:textSize="@dimen/font_size_medium">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <include layout="@layout/view_button_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_background_gray_light"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_transparent_no_border_no_radius_selector"
            android:text="@string/button_cancel_1"
            android:textAllCaps="true"
            android:textColor="@color/color_text_dark_gray" />

        <include
            android:id="@+id/deleteDivider"
            layout="@layout/view_horizontal_divider" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_transparent_no_border_no_radius_selector"
            android:text="@string/remove"
            android:textAllCaps="true"
            android:textColor="@color/color_red" />

        <include layout="@layout/view_horizontal_divider" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_transparent_no_border_no_radius_selector"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>