<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/view_focus_thief" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/size_title_bar"
        android:layout_height="@dimen/size_title_bar_small"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_arrow_back"
        android:contentDescription="@string/image_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_large_small"
        android:layout_marginRight="@dimen/margin_large_small"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_cukcuk_white"
            android:contentDescription="@string/image_view" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_up_case"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size_medium_small"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ln_input_margin_top"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edUserName"
                    style="@style/EditTextDefaultSingleLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_person_input"
                    android:hint="@string/login_number_phone_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingTop="@dimen/margin_medium"
                    android:paddingBottom="@dimen/margin_medium"
                    android:textSize="@dimen/font_size_medium_small"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginStart="52dp"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edPassword"
                    style="@style/EditTextDefaultSingleLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_pass"
                    android:gravity="center_vertical"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingTop="@dimen/margin_medium"
                    android:paddingBottom="@dimen/margin_medium"
                    android:textSize="@dimen/font_size_medium_small"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonDefault"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn_login"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/selector_button_login"
            android:text="@string/button_login"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size_medium_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" />

        <ImageView
            android:id="@+id/imgInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            app:srcCompat="@drawable/ic_about"
            android:contentDescription="@string/image_view" />
    </LinearLayout>
</LinearLayout>